--- a/INF152/tarea3/main.tex
+++ b/INF152/tarea3/main.tex
@@ -336,7 +336,7 @@ Está demás decir que si se encuentran dos tareas con el mismo grafo y los mism
         \end{minipage}
 
         \vspace*{0.5cm}
-        Lo que nos deja con la inecuación $10 \leq \mu \leq 10$, la cual se cumple solamente con $\mu = 10$
+        Lo que nos deja con la inecuación $10 \leq \mu \leq 10$, la cual se cumple solamente con $\mu = 10$.
         
         \newpage
         \item El grafo que se utilizará será el siguiente:
