--- a/INF152/tarea3/Diego_Paz/main.tex
+++ b/INF152/tarea3/Diego_Paz/main.tex
@@ -304,9 +304,7 @@ Está demás decir que si se encuentran dos tareas con el mismo grafo y los mism
             \label{tablitaholgura}
         \end{table}
 
-        Como podemos ver, la holgura de la actividad J es $(290+\mu)-290-\mu$, por lo tanto, \textbf{independiente del 
-        valor de $\mu$, J siempre pertenecerá a la ruta crítica}. La ruta crítica está conformada por las actividades 
-        con holgura 0, es decir, las actividades \{A, C, F, H, J ,K\}, y esta ruta crítica tiene un consumo de energía del $290 + \mu $\%
+        Como podemos ver, la holgura de la actividad J es $(290+\mu)-290-\mu$, por lo tanto, \textbf{independiente del valor de $\mu$, J siempre pertenecerá a la ruta crítica}. La ruta crítica está conformada por las actividades con holgura 0, es decir, las actividades \{A, C, F, H, J ,K\}, y esta ruta crítica tiene un consumo de energía del $290 + \mu $\%
         \newline
         \newline
         c) Si se tiene que consumir como máximo un 300\% y la holgura de D tiene que ser como mínimo un
